--- a/src/components/app-content/app-content.scss
+++ b/src/components/app-content/app-content.scss
@@ -1,5 +1,13 @@
 .app-content {
-  padding-top: 57px;
+  flex: 1 0 auto;
+  padding-top: 60px;
+
+  .page {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    height: 100%;
+  }
 
   p {
     margin: 0;
