--- a/src/components/app-footer/app-footer.scss
+++ b/src/components/app-footer/app-footer.scss
@@ -1,13 +1,9 @@
 .app-footer {
   width: 100%;
   padding: 1rem;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  z-index: 100;
   pointer-events: none;
-  background-color: #ffffff;
-  border-top: 1px solid #212121;
+  background-color: $white;
+  border-top: 1px solid $black;
   box-sizing: border-box;
 
   &:before {
