--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -31,7 +31,7 @@ body {
   width: 100%;
   color: $black;
   font-weight: 400;
-  font-family: "jb", Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   background-color: $white;
 }
 
@@ -61,12 +61,6 @@ ul {
   @include breakpoint(v-mobile) {
     padding-top: 6rem;
   }
-}
-
-.page {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: flex-start;
 }
 
 .link {
