--- a/src/components/app-footer/app-footer.scss
+++ b/src/components/app-footer/app-footer.scss
@@ -3,7 +3,7 @@
   padding: 1rem;
   pointer-events: none;
   background-color: $white;
-  border-top: 1px solid $black;
+  border-top: 1px solid rgba($black, 0.25);
   box-sizing: border-box;
 
   &:before {
