--- a/src/components/records-list/records-list.scss
+++ b/src/components/records-list/records-list.scss
@@ -2,14 +2,15 @@
   min-width: 400px;
   width: 30%;
   height: 100%;
+  flex-shrink: 0;
   position: relative;
-  border-right: 1px solid $black;
+  border-right: 1px solid rgba($black, 0.25);
 
   &__item {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    border-bottom: 1px solid $black;
+    border-bottom: 1px solid rgba($black, 0.25);
     font-size: 14px;
     cursor: pointer;
     user-select: none;
@@ -28,6 +29,10 @@
       &:hover {
         background-color: $lite-grey;
       }
+    }
+
+    &--active {
+      background-color: $middle-grey;
     }
   }
 
