--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -35,6 +35,33 @@ body {
   background-color: $white;
 }
 
+h1 {
+  margin-top: 0;
+  font: {
+    size: 24px;
+    weight: 700;
+  };
+  line-height: 1.5;
+}
+
+h2 {
+  margin-top: 0;
+  font: {
+    size: 20px;
+    weight: 700;
+  };
+  line-height: 1.5;
+}
+
+h3 {
+  margin-top: 0;
+  font: {
+    size: 16px;
+    weight: 700;
+  };
+  line-height: 1.5;
+}
+
 a {
   color: $black;
   text-decoration: none;
