--- a/src/components/app-content/app-content.scss
+++ b/src/components/app-content/app-content.scss
@@ -11,7 +11,24 @@
 
   .content {
     width: 100%;
+    height: 100%;
     padding: 16px;
+
+    &.is-blocked {
+      position: relative;
+
+      &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        background-color: rgba($white, 0.5);
+      }
+    }
   }
 
   p {
